src/z80asm/z80asm2/t/40-syntax/expected/section_01.txt
% z88dk-z80asm -v -dump-after-parse t/40-syntax//input/section_01.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Assembling t/40-syntax/input/section_01.asm...
t/40-syntax/input/section_01.asm:1:8: error: Identifier expected
    section
           ^
t/40-syntax/input/section_01.asm:2:9: error: Identifier expected
    section ,
            ^
t/40-syntax/input/section_01.asm:4:11: error: Unexpected token: ","
    section a1,
              ^
t/40-syntax/input/section_01.asm:5:11: error: Unexpected token: ","
    section a1,a2
              ^
t/40-syntax/input/section_01.asm:6:11: error: Unexpected token: ","
    section a1,a2,a3
              ^
Program
    SectionStmt
        Location: t/40-syntax/input/section_01.asm:3:1
        Name: a1
